# kairos-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  litellm_config.yaml  llm_config.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: __init__.py  env.py  script.py.mako
alembic/versions/: __init__.py
assets/music/: metadata.json
blend/configs/: domino_archetypes.json  render_presets.json
blend/scripts/: batch_variants.py  build_modules.py  generate_course.py  run_smoke_test.py  setup_environment.py  smoke_test_domino.py  validate_course.py
docs/: agent-reference.md  architecture.md  assets.md  implementation-document.md  kairos-design-doc-v1.1.md  kairos-logging-observability-spec.md  known-issues.md  lessons-learned.md  model-setup-guide.md  pipeline-expansion-guide.md  setup-guide.md
docs/adr/: 001-agent-orchestrator-separation.md  002-config-based-simulation.md  003-local-first-llm-routing.md  004-pluggable-tracing-sinks.md  005-step-level-caching.md  006-prompt-templates-as-files.md  007-two-tier-validation.md  008-pipeline-adapter-pattern.md  README.md
knowledge/cloud_learnings/: simulation-debugger_20260225_231136.json  simulation-debugger_20260225_231443.json  simulation-debugger_20260225_232843.json
knowledge/pymunk_patterns/: example_destruction.py  physics_presets.py
knowledge/visual_design/: psychology_research_report.md
migrations/: 001_initial_schema.sql  002_add_attempt_number.sql  003_add_foreign_keys.sql  004_add_thinking_content.sql  005_learning_loop.sql
sandbox/: Dockerfile
scripts/: make_test_configs.py  rewrite_imports.py  run_calibration.py  setup_ollama_models.ps1  setup_ollama_models.sh
src/kairos/: __init__.py  cli.py  config.py  exceptions.py
src/kairos/agents/: __init__.py  base.py
src/kairos/ai/: __init__.py
src/kairos/ai/eval/: __init__.py  eval_cases.yaml  harness.py
src/kairos/ai/knowledge/: __init__.py  domino_rulebook.md
src/kairos/ai/learning/: __init__.py  learning_loop.py
src/kairos/ai/llm/: __init__.py  capabilities.py  config.py  routing.py
src/kairos/ai/prompts/: __init__.py  lineage.py
src/kairos/ai/review/: __init__.py  audio_review_agent.py  (+1 more)
src/kairos/api/: __init__.py  app.py  deps.py  schemas.py
src/kairos/calibration/: __init__.py  bootstrap.py  knowledge_base.py  marble_models.py  models.py  perceptual_validator.py  quality_gate.py  sandbox.py  scenario.py
src/kairos/cli/: __init__.py  main.py
src/kairos/db/: __init__.py  models.py  operations.py  session.py
src/kairos/engines/: __init__.py
src/kairos/eval/: __init__.py  harness.py
src/kairos/models/: __init__.py  contracts.py  simulation.py
src/kairos/orchestrator/: __init__.py  graph.py  registry.py
src/kairos/pipeline/: __init__.py  graph.py  registry.py
src/kairos/pipelines/: __init__.py  contracts.py
src/kairos/schemas/: contracts.py  idea.py  simulation.py  video_editor.py
src/kairos/services/: __init__.py  analytics_sync.py  ast_extractor.py  async_subprocess.py  audio_review.py  burn_in.py  caption.py  category_rotation.py  ffmpeg_compositor.py  llm_config.py  llm_routing.py  monitoring.py  music_selector.py  prompt_registry.py  publish_queue.py  regression.py  response_cache.py  sandbox.py  screenshot_analyzer.py  session_logging.py  step_artifacts.py  tts.py  uploader.py  validation.py  video_review.py
src/kairos/skills/: __init__.py  catalogue.py  contracts.py
src/kairos/tools/: __init__.py  pipeline_stats.py  prompt_harness.py
src/kairos/web/: review_app.py
src/knowledge/cloud_learnings/: concept-developer-local_20260403_134742.json  concept-developer-local_20260403_134804.json  concept-developer-local_20260403_135909.json  concept-developer-local_20260403_140030.json  concept-developer-local_20260404_010118.json
tests/: conftest.py
tests/golden_set/: concept_briefs.json  test_regression.py
tests/integration/: test_checkpoint_recovery.py  test_fallback_routing.py  test_llm_integration.py  test_pipeline_e2e.py  test_publish_flow.py  test_review_flow.py  test_simulation_sandbox.py
tests/pipelines/: test_pipeline_interface.py
tests/pipelines/domino/: test_domino_pipeline.py
tests/pipelines/physics/: test_physics_pipeline.py  test_pymunk_patterns.py  test_scenario_categories.py
tests/quality/: test_ai_quality.py  test_video_output.py
tests/unit/: test_marble_run_skills.py  test_skill_library.py
tests/unit/agents/: test_idea_agent.py  test_simulation_agent.py  test_video_editor_agent.py
tests/unit/api/: test_api_app.py
tests/unit/calibration/: __init__.py  test_bootstrap_scenarios.py  test_composite_corrections.py  test_knowledge_base.py  test_models.py  test_perceptual_validator.py  test_quality_gate.py  test_sandbox.py
tests/unit/creative/: test_camera_router.py  test_camera_validator.py  test_final_reviewer.py  test_models.py  test_pipeline.py  test_placement_calibration.py  test_session.py  test_validator.py
tests/unit/db/: test_db_operations.py
tests/unit/models/: test_pydantic_models.py  test_simulation_models.py
tests/unit/pipeline/: test_graph.py
tests/unit/services/: test_analytics_sync.py  test_async_subprocess.py  test_burn_in.py  test_caption_framework.py  test_category_rotation.py  test_context_budget.py  test_cost_alert.py  test_ffmpeg_compositor.py  test_learning_loop.py  test_monitoring.py  test_music_selector.py  test_publish_queue.py  test_response_cache.py  test_sandbox_executor.py  test_thinking_accumulator.py  test_uploader.py  test_utc_datetimes.py  test_validation_engine.py
tests/unit/tools/: __init__.py  test_pipeline_stats.py  test_prompt_harness.py
tests/unit/tracing/: test_events.py  test_formatters.py  test_lineage.py  test_summary.py  test_tracer.py  test_writers.py
tests/unit/web/: test_review_dashboard.py
web/: README.md  angular.json  package-lock.json  package.json
web/src/: styles.scss
web/src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts
web/src/environments/: environment.ts
(+194 files in other folders)
